...
							/>
						</CustomHeader>
					),
				}}
			/>
			<SafeAreaView
				testID="home_screen"
				edges={["left", "right"]}
				style={{
					flex: 1,
					flexDirection: "column",
					justifyContent: "space-between",
					backgroundColor: "#EEF2F2",
...
							</Pressable>
						</View>
						<View
							style={{ flexDirection: "row", alignItems: "center", gap: 8 }}
						>
							<Pressable
								testID="open_song_wish"
								onPress={() => push("./songwish")}
								onPressIn={() => setActiveButton("songwish")}
								onPressOut={() => setActiveButton(false)}
								accessibilityLabel="Songwunsch"
								accessibilityRole="button"
								style={{
...
									>
										Wunsch
									</Text>
								)}
							</Pressable>
							<Pressable
								testID="open_tracklist"
								onPress={() => push("./tracklist")}
								onPressIn={() => setActiveButton("tracklist")}
								onPressOut={() => setActiveButton(false)}
								accessibilityLabel="Wiedergabeliste"
								accessibilityRole="button"
								style={{
...
